 1.1b7
- Improved setting notes sharp/flat/natural to be easier and more flexible
- Improved note splitting to be wiser
- Made note beaming wiser about how it selects which notes to beam toghether
- Added italian translation thanks to Gianluca Pignalberi
- When importing midi, remove events from unsupported controllers (fixes some playback bugs)
- Added more midi controllers
- Fixed zooming in songs with multiple time signatures
- Made zooming smoother by removing unneeded renders
- Fixed removing empty tracks in imported midis
- Do not accept empty track names
- switched rendering from plain OpenGL to higher-level primitives, cleaning up code and making it more modular
- Fixed editing time signatures in manual mode
- Fixed rendering of silences in empty measures when using manual time signature management
- Removed useless stuff from .Aria files, making them significantly smaller
- Initial support for a non-OpenGL version (mainly for linux where drivers aren't always there)
- Fixed horizontal scrollbar initially too short

 1.1b6
- fixed crash when removing tempo events
- made it easier to trigger tuning picker in guitar editor
- drum editor : selection now works if click/drag starts on black section header
- more improvements to lightweight vertical scrollbar
- handle when no vertical scrollbar is needed in drum editor
- fixed notes not beaming in chords of some imported midis
- fixed note subtails disappearing in some imported midis
- fixed amount of measures too short in some imported midis
- improved grouping of beamed notes in common non-4/4 time signatures
- improved grouping of beamed triplets
- converted keys image from gif to png
- improved handling of ties with whole notes
- Improved beamed notes grouping in non-4/4 time signatures
- Hopefully fixed volume picker not closing when pressing escape on all platforms
- Improved drum editor behaviour when few drums are shown
- Removed many useless renders during song playback
- Fixed linux crash