@@ -39,6 +39,7 @@ FOUND_NOTHING
 
 // can have 2 uses : describing note and describing visual sign
 // e.g. F# will be described as SHARP as note, but if you put it in a score where all Fs are #, its visible sign will be NONE
+// When describing a note's sign, use either NATURAL or NONE. When describing a note's pitch, NONE is not to be used
 enum
 {
     SHARP = 0,
