@@ -101,6 +101,7 @@ NOTE: sorry, this is very raw :)
  ## crash when emptying tempo in control view [reported, not tested] 
 
 * test new locale code on linux
+* undoing sign changes in score doesn't quite work (at least when using shift+arrows)
 
 - setting sharp/flat sign manually sometimes doesn't work (when it's possible to display the note on a level with no sign)
 
